--- a/.github/workflows/checking_tests.yml
+++ b/.github/workflows/checking_tests.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - develop
+      - staging
 
 jobs:
   test:
@@ -21,6 +22,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Install dependencies
+        run: npm run start
 
       - name: Run vitest tests
         run: npm run test-component
