--- a/.github/workflows/checking_tests.yml
+++ b/.github/workflows/checking_tests.yml
@@ -6,10 +6,9 @@ on:
       - develop
 
 jobs:
-  test:
+  build:
     name: Checking Tests
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
