--- a/.github/workflows/checking_tests.yml
+++ b/.github/workflows/checking_tests.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install dependencies
+      - name: Start Application
         run: npm run start
 
-      - name: Run vitest tests
+      - name: Run Cypress Component test
         run: npm run test-component
