--- a/.github/workflows/checking_tests.yml
+++ b/.github/workflows/checking_tests.yml
@@ -1,24 +1,28 @@
 name: Checking Tests
 
+# Trigger workflow on all pull requests
 on:
   pull_request:
     branches:
       - develop
-
+      - staging
+# Jobs to carry out
 jobs:
   test:
-    name: Checking Tests
+    # Operating system to run job on
     runs-on: ubuntu-latest
+    # Steps in job
     steps:
+      # Get code from repo
       - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/checkout@v1
+      - name: Use Node.js 21.x
+        uses: actions/setup-node@v1
         with:
           node-version: 21.x
-
-      - name: Install dependencies
+          
+      # Install dependencies
+      - name: :toolbox: Install Deps
         run: npm install
 
       - name: Start Application
