--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Test
         run: |
           npm install
+          npm run build
           npm run start
           npm run test-component
 
