--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,10 +20,7 @@ jobs:
           node-version: 21.x
           
       - name: Install Deps
-        run: npm render-build
-
-      - name: Start Application
-        run: npm run start
+        run: npm run render-build
 
       - name: Run Cypress Component test
         run: npm run test-component
